made docs folder

--- a/garden_results_html.Rmd
+++ b/garden_results_html.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "garden_results"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "Evan Hersh"
 date: "08/07/2019"
 output: html_document
