--- a/garden_results_html.Rmd
+++ b/garden_results_html.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(echo = TRUE)
 knitr::read_chunk("dataprep.R")
 ```
 
-```{r echo=FALSE, cache=TRUE, results="hide", include=FALSE}
+```{r echo=FALSE, cache=FALSE, results="hide", include=FALSE}
 # Data Exploration and averages
 
 # Data Exploration and averages
@@ -153,36 +153,36 @@ I've made some summary plots for each of the fitness traits we've measured over 
 
 ## Survival
 
-```{r, fig.height=7, fig.width=10, cache=TRUE, echo=FALSE}
+```{r, fig.height=7, fig.width=10, cache=FALSE, echo=FALSE}
 gg.surv.means.ms.all
 ```
 
 ## Size 
 
 Leaf length
-```{r, fig.height=10, fig.width=12, cache=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
+```{r, fig.height=10, fig.width=12, cache=FALSE, echo=FALSE, warning=FALSE, message=FALSE}
 gg.length.means.ms.all
 ```
 
 Leaf Number
-```{r, fig.height=10, fig.width=12, cache=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
+```{r, fig.height=10, fig.width=12, cache=FALSE, echo=FALSE, warning=FALSE, message=FALSE}
 gg.num.means.ms.all
 ```
 
 ## Flowering
 
 Number of flowering individuals
-```{r, fig.height=10, fig.width=12, cache=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
+```{r, fig.height=10, fig.width=12, cache=FALSE, echo=FALSE, warning=FALSE, message=FALSE}
 gg.numflower.ms.all
 ```
 
 Number of flower heads
-```{r, fig.height=10, fig.width=12, cache=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
+```{r, fig.height=10, fig.width=12, cache=FALSE, echo=FALSE, warning=FALSE, message=FALSE}
 gg.budsum.ms.all
 ```
 
 Percent of surviving individuals that flowered.
-```{r, fig.height=10, fig.width=12, cache=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
+```{r, fig.height=10, fig.width=12, cache=FALSE, echo=FALSE, warning=FALSE, message=FALSE}
 gg.meanflower.ms.all
 ```
 
